// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inspector inspect should render a document wrapper 1`] = `
"└ root
  └ paragraph
    └ span \\"Test\\"
"
`;

exports[`inspector inspect should render a simple root node 1`] = `
"└ root
  └ paragraph
    └ span \\"Hello World\\"
"
`;

exports[`inspector inspect should render block and inline block nodes 1`] = `
"└ root
  ├ block (item: \\"block-123\\")
  └ paragraph
    ├ span \\"Text with \\"
    ├ inlineBlock (item: \\"inline-456\\")
    └ span \\" inline block\\"
"
`;

exports[`inspector inspect should render code nodes with language and content 1`] = `
"└ root
  ├ code (language: \\"javascript\\") \\"console.log(\\"Hello, World!\\");\\"
  └ code \\"echo \\"No language specified\\"\\"
"
`;

exports[`inspector inspect should render heading nodes with level 1`] = `
"└ root
  ├ heading (level: 1)
  │ └ span \\"Main Title\\"
  └ heading (level: 2)
    └ span \\"Subtitle\\"
"
`;

exports[`inspector inspect should render link nodes with URL and meta 1`] = `
"└ root
  └ paragraph
    ├ span \\"Visit \\"
    ├ link (url: \\"https://example.com\\")
    │ └ span \\"this link\\"
    └ link (url: \\"https://meta.example.com\\", meta: {title=\\"Example Site\\", target=\\"_blank\\"})
      └ span \\"link with meta\\"
"
`;

exports[`inspector inspect should render list nodes with style 1`] = `
"└ root
  └ list (style: bulleted)
    ├ listItem
    │ └ paragraph
    │   └ span \\"First item\\"
    └ listItem
      └ paragraph
        └ span \\"Second item\\"
"
`;

exports[`inspector inspect should render multiple children with correct tree structure 1`] = `
"└ root
  ├ paragraph
  │ └ span \\"First paragraph\\"
  └ paragraph
    └ span \\"Second paragraph\\"
"
`;

exports[`inspector inspect should render paragraph with custom style 1`] = `
"└ root
  └ paragraph (style: \\"custom-style\\")
    └ span \\"Styled paragraph\\"
"
`;

exports[`inspector inspect should render span nodes with marks 1`] = `
"└ root
  └ paragraph
    ├ span \\"Normal text\\"
    ├ span (marks: strong) \\"Bold text\\"
    └ span (marks: strong, emphasis) \\"Bold italic\\"
"
`;

exports[`inspector inspect should render thematic break 1`] = `
"└ root
  ├ paragraph
  │ └ span \\"Before break\\"
  ├ thematicBreak
  └ paragraph
    └ span \\"After break\\"
"
`;

exports[`inspector inspect should truncate long text content 1`] = `
"└ root
  ├ paragraph
  │ └ span \\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...\\"
  └ code \\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...\\"
"
`;
